--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,23 @@
   </properties>
 
   <dependencies>
-   <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-	<dependency>
+  		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<version>1.4.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>Brixton.SR1</version>
+			<type>pom</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+  	<dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
     </dependency>
