--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+	<dependency>
+        <groupId>com.netflix.archaius</groupId>
+        <artifactId>archaius-core</artifactId>
+        <version>0.7.1</version>
+    </dependency>
+	
   	<dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
